Add an example of diagnosing with verbose GC logs